Cleans up more JSNI in JRE
Change-Id: I54377284ba524ab66ac2aa8f9a454920fe7cbc48

--- a/user/BUILD
+++ b/user/BUILD
@@ -94,6 +94,7 @@ java_library(
             "**/SuperDevModeLogger.java",  # relies on ConsoleLogger
             "**/EmulatedCharset.java",
             "**/HashCodes.java",  # relies on java8 only APIs
+            "**/NativeRegExp.java",  # has default method
             "**/RunStyleSelenium.java",
         ] + JSINTEROP_SRCS,
     ),
